Создан базовый функционал получения ответа от API + простейший вывод на html-страницу

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=space_rest_api
+
+# NASA API
+nasa.api.key=nzTef5lX8BFpNPZZbGShAAaPE3ifHgFWu5WMdBPP
+nasa.api.url=https://api.nasa.gov/planetary/apod
