Все секретные данные перенесены в переменные окружения + добавлен Postgres и улучшена сборка в Dockerfile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,16 @@
 spring.application.name=space_rest_api
 
 # NASA API
-nasa.api.key=nzTef5lX8BFpNPZZbGShAAaPE3ifHgFWu5WMdBPP
+nasa.api.key=${NASA_API_KEY}
 nasa.api.url=https://api.nasa.gov/planetary/apod
+
+# Database
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
